--- a/src/app/components/admin-sql/admin-sql.css
+++ b/src/app/components/admin-sql/admin-sql.css
@@ -53,17 +53,17 @@ Asegura que los componentes de PrimeNG ocupen su espacio:host {
 ::ng-deep .p-tag-success {
     background: rgba(35, 134, 54, 0.2) !important;
     color: #3fb950 !important;
-    border: 1px solid rgba(63, 185, 80, 0.3) !important;
+    border: 1px solid rgba(63, 185, 80, 0.5) !important;
 }
 
 ::ng-deep .p-tag-danger {
     background: rgba(248, 81, 73, 0.2) !important;
     color: #ff7b72 !important;
-    border: 1px solid rgba(248, 81, 73, 0.3) !important;
+    border: 1px solid rgba(248, 81, 73, 0.5) !important;
 }
 
 ::ng-deep .p-tag-warn {
     background: rgba(210, 153, 34, 0.2) !important;
-    color: #d29922 !important;
-    border: 1px solid rgba(210, 153, 34, 0.3) !important;
+    color: #ffa600 !important;
+    border: 1px solid rgba(210, 153, 34, 0.5) !important;
 }
